[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Drag/Drag.tscn" type="PackedScene" id=2]
[ext_resource path="res://Resources/water_shader.shader" type="Shader" id=3]
[ext_resource path="res://Scripts/BubbleGen.gd" type="Script" id=4]
[ext_resource path="res://Assets/bubble.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Root.gd" type="Script" id=6]
[ext_resource path="res://Scripts/BubbleGenBg.gd" type="Script" id=7]
[ext_resource path="res://Scenes/Main.tscn" type="PackedScene" id=8]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 3 )
shader_param/blue_tint = Color( 0, 0.862745, 0.882353, 1 )
shader_param/sprite_scale = Vector2( 0.7, 0.8 )
shader_param/scale_x = 0.67

[node name="Root" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="CanvasLayer" parent="."]
layer = 2
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="MainMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.298039, 0.298039, 0.298039, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="MainMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="MainMenu/Control"]
margin_left = 670.0
margin_right = 718.0
margin_bottom = 48.0
text = "S"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="MainMenu/Control"]
margin_left = 280.0
margin_top = 200.0
margin_right = 440.0
margin_bottom = 290.0
text = "P"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsMenu" type="Popup" parent="MainMenu"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="V" type="VBoxContainer" parent="MainMenu/SettingsMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_stretch_ratio = 0.2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Configure Controls" type="Label" parent="MainMenu/SettingsMenu/V"]
margin_right = 720.0
margin_bottom = 79.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
text = "Configure Controls"
align = 1
valign = 1

[node name="G" type="Label" parent="MainMenu/SettingsMenu/V"]
margin_top = 83.0
margin_right = 720.0
margin_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.8

[node name="left" type="Button" parent="MainMenu/SettingsMenu/V/G"]
margin_left = 64.0
margin_top = 157.0
margin_right = 144.0
margin_bottom = 237.0
text = "<"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Drag" parent="MainMenu/SettingsMenu/V/G/left" instance=ExtResource( 2 )]
visible = false

[node name="right" type="Button" parent="MainMenu/SettingsMenu/V/G"]
margin_left = 632.0
margin_top = 157.0
margin_right = 712.0
margin_bottom = 237.0
text = ">"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Drag" parent="MainMenu/SettingsMenu/V/G/right" instance=ExtResource( 2 )]
visible = false
margin_left = -592.0
margin_right = -592.0

[node name="shoot" type="Button" parent="MainMenu/SettingsMenu/V/G"]
margin_left = 624.0
margin_top = 29.0
margin_right = 704.0
margin_bottom = 109.0
text = "Shoot"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Drag" parent="MainMenu/SettingsMenu/V/G/shoot" instance=ExtResource( 2 )]
visible = false
margin_left = -624.0
margin_top = 152.0
margin_right = -624.0
margin_bottom = 152.0

[node name="SettingsCancel" type="Button" parent="MainMenu/SettingsMenu"]
margin_left = 656.0
margin_top = 16.0
margin_right = 706.0
margin_bottom = 66.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Button" parent="MainMenu/SettingsMenu"]
margin_left = 16.0
margin_top = 16.0
margin_right = 66.0
margin_bottom = 66.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelSelection" type="Popup" parent="MainMenu"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BubbleGen" type="Control" parent="MainMenu/LevelSelection"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
texture = ExtResource( 5 )

[node name="Tween" type="Tween" parent="MainMenu/LevelSelection/BubbleGen"]

[node name="V" type="VBoxContainer" parent="MainMenu/LevelSelection"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_stretch_ratio = 0.2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MainMenu/LevelSelection/V"]
margin_right = 720.0
margin_bottom = 79.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
text = "Level Selection"
align = 1
valign = 1

[node name="MC" type="MarginContainer" parent="MainMenu/LevelSelection/V"]
margin_top = 83.0
margin_right = 720.0
margin_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.8
custom_constants/margin_right = 150
custom_constants/margin_top = 0
custom_constants/margin_left = 150
custom_constants/margin_bottom = 150

[node name="G" type="GridContainer" parent="MainMenu/LevelSelection/V/MC"]
margin_left = 150.0
margin_right = 570.0
margin_bottom = 167.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.8
columns = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LSelBack" type="Button" parent="MainMenu/LevelSelection"]
margin_left = 670.0
margin_right = 720.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="MainMenu"]

[node name="Main" parent="." instance=ExtResource( 8 )]

[node name="Bg" type="CanvasLayer" parent="."]
layer = -1

[node name="BubbleGenBg" type="Control" parent="Bg"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 7 )
texture = ExtResource( 5 )

[node name="Tween" type="Tween" parent="Bg/BubbleGenBg"]

[node name="Timer1" type="Timer" parent="Bg/BubbleGenBg"]
autostart = true

[node name="Timer2" type="Timer" parent="Bg/BubbleGenBg"]
wait_time = 1.3
autostart = true

[node name="Timer3" type="Timer" parent="Bg/BubbleGenBg"]
wait_time = 0.8
autostart = true

[node name="Fg" type="CanvasLayer" parent="."]
layer = 100

[node name="Water" type="ColorRect" parent="Fg"]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MainMenu/Control/Settings" to="MainMenu" method="_on_Settings_pressed"]
[connection signal="pressed" from="MainMenu/Control/Play" to="MainMenu" method="_on_Play_pressed"]
[connection signal="pressed" from="MainMenu/SettingsMenu/SettingsCancel" to="MainMenu" method="_on_SettingsCancel_pressed"]
[connection signal="pressed" from="MainMenu/SettingsMenu/Save" to="MainMenu" method="_on_Save_pressed"]
[connection signal="pressed" from="MainMenu/LevelSelection/LSelBack" to="MainMenu" method="_on_LSelBack_pressed"]
[connection signal="timeout" from="Bg/BubbleGenBg/Timer1" to="Bg/BubbleGenBg" method="_on_Timer_timeout"]
[connection signal="timeout" from="Bg/BubbleGenBg/Timer2" to="Bg/BubbleGenBg" method="_on_Timer_timeout"]
[connection signal="timeout" from="Bg/BubbleGenBg/Timer3" to="Bg/BubbleGenBg" method="_on_Timer_timeout"]
